--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
   "type": "module",
   "private": false,
   "dependencies": {
-    "fastmcp": "^3.15.2",
-    "zod": "^3.24.2"
+    "fastmcp": "^3.16.0"
   },
   "bin": {
     "clay-mcp": "./index.js"
