--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,5 +1,9 @@
+runtime: "container"
+build:
+  dockerfile: "Dockerfile"
+  dockerBuildPath: "."
 startCommand:
-  type: stdio
+  type: "http"
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
     type: object
